fixed scrollbar appearing on the bottom of the page for small screens

--- a/app/styles/pages/events.scss
+++ b/app/styles/pages/events.scss
@@ -7,11 +7,6 @@
 }
 
 @media screen and (max-width: 450px) {
-
-  html {
-    overflow-x: hidden;
-  }
-
   .search-box {
     float: none;
     margin-top: 2px;
