--- a/app/styles/pages/public-event.scss
+++ b/app/styles/pages/public-event.scss
@@ -213,3 +213,10 @@
 .event-map > iframe.g-map {
   height: 300px;
 }
+
+@media (max-width: 450px) {
+  .ui.relaxed.grid {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+}
